--- a/index.html
+++ b/index.html
@@ -65,6 +65,80 @@
     </nav>
     <!--#endregion - end of - Offcanvas fixed-top main navigation -->
 
+    <!--#region - start of - header carousel section -->
+    <header class="header pt-5 mt-5">
+        <div class="container-xl">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner rounded text-center text-white">
+                    <div class="carousel-item active">
+                        <!--#region - start of - carousel background  -->
+                        <figure class="m-0">
+                            <picture class="d-flex">
+                                <source srcset="./images/cover/cover-1.webp">
+                                <img src="./images/cover/cover-1.png" alt="image" class="img-fluid carousel-img " width="1320" height="700">
+                            </picture>
+                        </figure>
+                        <!--#endregion - end of - carousel background -->
+                        <div class="position-absolute w-100  h-100 top-0 bg-dark bg-opacity-75 p-3 d-flex flex-column justify-content-center">
+                            <div class="col-12 col-md-9 col-xl-6 align-self-center">
+                                <h2 class="mb-3 fs-1 px-md-5">Get Started Digital Learning</h2>
+                                <p class="pb-md-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <button type="button" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</button>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="carousel-item">
+                        <!--#region - start of - carousel background  -->
+                        <figure class="m-0">
+                            <picture class="d-flex">
+                                <source srcset="./images/cover/cover-2.webp">
+                                <img src="./images/cover/cover-2.jpg" alt="image" class="img-fluid carousel-img " width="1500" height="1000">
+                            </picture>
+                        </figure>
+                        <!--#endregion - end of - carousel background -->
+                        <div class="position-absolute w-100  h-100 top-0 bg-dark bg-opacity-75 p-3 d-flex flex-column justify-content-center">
+                            <div class="col-12 col-md-9 col-xl-6 align-self-center">
+                                <h2 class="mb-3 fs-1 px-md-5">Get Started Digital Learning</h2>
+                                <p class="pb-md-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <button type="button" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!--#region - start of - carousel background  -->
+                        <figure class="m-0">
+                            <picture class="d-flex">
+                                <source srcset="./images/cover/cover-3.webp">
+                                <img src="./images/cover/cover-3.jpg" alt="image" class="img-fluid carousel-img " width="4096" height="2160">
+                            </picture>
+                        </figure>
+                        <!--#endregion - end of - carousel background -->
+                        <div class="position-absolute w-100  h-100 top-0 bg-dark bg-opacity-75 p-3 d-flex flex-column justify-content-center">
+                            <div class="col-12 col-md-9 col-xl-6 align-self-center">
+                                <h2 class="mb-3 fs-1 px-md-5">Get Started Digital Learning</h2>
+                                <p class="pb-md-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <button type="button" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</button>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev d-none d-md-inline-flex" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next d-none d-md-inline-flex" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <!--#endregion - end of - header carousel section -->
+
     <!--#region - start of - Register modal -->
     <div class="modal fade" id="register-modal" tabindex="-1" aria-labelledby="register-modal-label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
