main section and small fixes

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <!--#region - start of - header carousel section -->
     <header class="header pt-5 mt-5">
-        <div class="container-xl">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="container-md container-xl">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded text-center text-white">
                     <div class="carousel-item active">
                         <!--#region - start of - carousel background  -->
@@ -138,6 +138,170 @@
         </div>
     </header>
     <!--#endregion - end of - header carousel section -->
+
+    <!--#region - start of - main section -->
+    <main class="main pt-5 mt-5">
+        <div class="container-md container-xl">
+            <div class="row justify-content-center">
+
+                <div class="col-md-11 col-xl-7 mb-5">
+                    <article class="text-center">
+                        <h1 class="fs-1 px-xl-5 mx-xl-5 mb-3">Discover Our Popular Courses</h1>
+                        <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    </article>
+                </div>
+
+                <!--#region - start of - single card -->
+                <div class="col-xl-6">
+                    <div class="card mb-3">
+                        <div class="row align-items-md-center g-0">
+                            <figure class="col-md-4 m-0">
+                                <picture class="d-flex">
+                                    <source media="(min-width: 48rem)" srcset="./images/course/course-1.webp, ./images/course/course-1.png">
+                                    <source srcset="./images/course/course-1-xs.webp">
+                                    <img src="./images/course/course-1-xs.png" alt="image" class="img-fluid w-100 rounded-start" width="200" height="200">
+                                </picture>
+                            </figure>
+                            <div class="col-md-8">
+                                <div class="card-body px-md-4">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                    <p class="card-text text-info fw-bold lead">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--#endregion - end of - single card -->
+
+                <!--#region - start of - single card -->
+                <div class="col-xl-6">
+                    <article class="card mb-3">
+                        <div class="row align-items-md-center g-0">
+                            <figure class="col-md-4 m-0">
+                                <picture class="d-flex">
+                                    <source media="(min-width: 48rem)" srcset="./images/course/course-2.webp, ./images/course/course-2.png">
+                                    <source srcset="./images/course/course-2-xs.webp">
+                                    <img src="./images/course/course-2-xs.png" alt="image" class="img-fluid w-100 rounded-start" width="200" height="200">
+                                </picture>
+                            </figure>
+                            <div class="col-md-8">
+                                <div class="card-body px-md-4">
+                                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                    <p class="card-text text-info fw-bold lead">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <!--#endregion - end of - single card -->
+
+                <!--#region - start of - single card -->
+                <div class="col-xl-6">
+                    <article class="card mb-3">
+                        <div class="row align-items-md-center g-0">
+                            <figure class="col-md-4 m-0">
+                                <picture class="d-flex">
+                                    <source media="(min-width: 48rem)" srcset="./images/course/course-3.webp, ./images/course/course-3.png">
+                                    <source srcset="./images/course/course-3-xs.webp">
+                                    <img src="./images/course/course-3-xs.png" alt="image" class="img-fluid w-100 rounded-start" width="200" height="200">
+                                </picture>
+                            </figure>
+                            <div class="col-md-8">
+                                <div class="card-body px-md-4">
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                    <p class="card-text text-info fw-bold lead">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <!--#endregion - end of - single card -->
+
+                <!--#region - start of - only shown in xl devices -->
+                <!--#region - start of - single card -->
+                <div class="col-xl-6 d-none d-xl-block">
+                    <div class="card mb-3">
+                        <div class="row align-items-md-center g-0">
+                            <figure class="col-md-4 m-0">
+                                <picture class="d-flex">
+                                    <source media="(min-width: 48rem)" srcset="./images/course/course-4.webp, ./images/course/course-4.png">
+                                    <source srcset="./images/course/course-4-xs.webp">
+                                    <img src="./images/course/course-4-xs.png" alt="image" class="img-fluid w-100 rounded-start" width="200" height="200">
+                                </picture>
+                            </figure>
+                            <div class="col-md-8">
+                                <div class="card-body px-md-4">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                    <p class="card-text text-info fw-bold lead">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--#endregion - end of - single card -->
+
+                <!--#region - start of - single card -->
+                <div class="col-xl-6 d-none d-xl-block">
+                    <article class="card mb-3">
+                        <div class="row align-items-md-center g-0">
+                            <figure class="col-md-4 m-0">
+                                <picture class="d-flex">
+                                    <source media="(min-width: 48rem)" srcset="./images/course/course-5.webp, ./images/course/course-5.png">
+                                    <source srcset="./images/course/course-5-xs.webp">
+                                    <img src="./images/course/course-5-xs.png" alt="image" class="img-fluid w-100 rounded-start" width="200" height="200">
+                                </picture>
+                            </figure>
+                            <div class="col-md-8">
+                                <div class="card-body px-md-4">
+                                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                    <p class="card-text text-info fw-bold lead">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <!--#endregion - end of - single card -->
+
+                <!--#region - start of - single card -->
+                <div class="col-xl-6 d-none d-xl-block">
+                    <article class="card mb-3">
+                        <div class="row align-items-md-center g-0">
+                            <figure class="col-md-4 m-0">
+                                <picture class="d-flex">
+                                    <source media="(min-width: 48rem)" srcset="./images/course/course-6.webp, ./images/course/course-6.png">
+                                    <source srcset="./images/course/course-6-xs.webp">
+                                    <img src="./images/course/course-6-xs.png" alt="image" class="img-fluid w-100 rounded-start" width="200" height="200">
+                                </picture>
+                            </figure>
+                            <div class="col-md-8">
+                                <div class="card-body px-md-4">
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                    <p class="card-text text-info fw-bold lead">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <!--#endregion - end of - single card -->
+                <!--#endregion - end of - only shown in xl devices -->
+
+                <div class="col-12 text-center mb-3 mt-5">
+                    <button type="button" class="btn btn-info text-white px-4 fs-4 d-xl-none">View All</button>
+                    <button type="button" class="btn btn-info text-white px-4 fs-4 d-none d-xl-inline-flex">See More Courses</button>
+                </div>
+
+            </div>
+        </div>
+    </main>
+    <!--#endregion - end of - main section -->
+
+
 
     <!--#region - start of - Register modal -->
     <div class="modal fade" id="register-modal" tabindex="-1" aria-labelledby="register-modal-label" aria-hidden="true">
