--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!--#endregion - end of - Offcanvas fixed-top main navigation -->
 
     <!--#region - start of - header carousel section -->
-    <header class="header pt-5 mt-5">
+    <header class="header pt-5 mt-5 mb-3">
         <div class="container-md container-xl">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded text-center text-white">
@@ -140,7 +140,7 @@
     <!--#endregion - end of - header carousel section -->
 
     <!--#region - start of - main section -->
-    <main class="main pt-5 mt-5">
+    <main class="main pt-5 mt-5  mb-3">
         <div class="container-md container-xl">
             <div class="row justify-content-center">
 
@@ -301,6 +301,45 @@
     </main>
     <!--#endregion - end of - main section -->
 
+
+    <!--#region - start of - explore section -->
+    <section class="explore pt-5 mt-5 mb-3">
+        <div class="container-md">
+            <div class="row g-0 bg-info bg-opacity-10 rounded align-items-md-center">
+                <figure class="col-md-6 m-0">
+                    <picture class="d-flex">
+                        <source srcset="./images/working.webp">
+                        <img src="./images/working.png" alt="image" class="img-fluid w-100 explore-img" width="600" height="806">
+                    </picture>
+                </figure>
+                <div class="col-md-6 ps-md-4 ps-xl-5">
+                    <article class="p-4 p-md-0">
+                        <h2 class="fs-1 fw-bold pb-xl-3 mb-3 mb-md-1">Explore The elearning Institute</h2>
+                        <p class="text-secondary pb-xl-3 mb-md-1 position-relative">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words <span class="d-none d-xl-inline">which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</span>
+
+                            <span class="d-none d-lg-inline-block mt-3">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</span><a href="#" class="text-decoration-none d-inline-flex d-xl-none"><span class="text-secondary">...</span> See more</a>
+                        </p>
+                        <div class="row pb-xl-3  mb-md-1">
+                            <div class="col-6 col-xl-4">
+                                <p class="fs-1 mb-1 fw-bold">3.2K+</p>
+                                <p class="mb-md-1 text-secondary">Online Course</p>
+                            </div>
+                            <div class="col-6 col-xl-4">
+                                <p class="fs-1 mb-1 fw-bold">600+</p>
+                                <p class="mb-md-1 text-secondary">Expert Member</p>
+                            </div>
+                            <div class="col-6 col-xl-4">
+                                <p class="fs-1 mb-1 fw-bold">1K+</p>
+                                <p class="mb-md-1 text-secondary">Rating & Review</p>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-info text-white fs-4 px-4">Read more</button>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--#endregion - end of - explore section -->
 
 
     <!--#region - start of - Register modal -->
