--- a/index.html
+++ b/index.html
@@ -301,7 +301,6 @@
     </main>
     <!--#endregion - end of - main section -->
 
-
     <!--#region - start of - explore section -->
     <section class="explore pt-5 mt-5 mb-3">
         <div class="container-md">
@@ -341,7 +340,6 @@
     </section>
     <!--#endregion - end of - explore section -->
 
-
     <!--#region - start of - newsletter section -->
     <section class="newsletter pt-5 mt-5 mb-3">
         <div class="container-md">
@@ -361,6 +359,81 @@
     </section>
     <!--#endregion - end of - newsletter section -->
 
+    <!--#region - start of - students section -->
+    <section class="students pt-5 mt-5 mb-3">
+        <div class="container-md">
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <article class="col-xl-5 px-0">
+                        <h2 class="fs-1">Meet Our Successfull Students</h2>
+                        <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    </article>
+                </div>
+
+                <!--#region - start of - single student -->
+                <div class="col-md-6 col-xl-3">
+                    <div class="card border-0 mb-3">
+                        <picture class="d-flex">
+                            <source srcset="./images/student/student-1.webp">
+                            <img src="./images/student/student-1.png" alt="image" class="img-fluid card-img-top" width="" height="">
+                        </picture>
+                        <div class="card-body border rounded-bottom">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text text-secondary">UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <!--#endregion - end of - single student -->
+
+                <!--#region - start of - single student -->
+                <div class="col-md-6 col-xl-3">
+                    <div class="card border-0 mb-3">
+                        <picture class="d-flex">
+                            <source srcset="./images/student/student-2.webp">
+                            <img src="./images/student/student-2.png" alt="image" class="img-fluid card-img-top" width="" height="">
+                        </picture>
+                        <div class="card-body border rounded-bottom">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text text-secondary">UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <!--#endregion - end of - single student -->
+                <!--#region - start of - single student -->
+                <div class="col-md-6 col-xl-3">
+                    <div class="card border-0 mb-3">
+                        <picture class="d-flex">
+                            <source srcset="./images/student/student-3.webp">
+                            <img src="./images/student/student-3.png" alt="image" class="img-fluid card-img-top" width="" height="">
+                        </picture>
+                        <div class="card-body border rounded-bottom">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text text-secondary">UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <!--#endregion - end of - single student -->
+                <!--#region - start of - single student -->
+                <div class="col-md-6 col-xl-3">
+                    <div class="card border-0 mb-3">
+                        <picture class="d-flex">
+                            <source srcset="./images/student/student-4.webp">
+                            <img src="./images/student/student-4.png" alt="image" class="img-fluid card-img-top" width="" height="">
+                        </picture>
+                        <div class="card-body border rounded-bottom">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text text-secondary">UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <!--#endregion - end of - single student -->
+                <div class="col-12 text-center mt-4 mt-xl-5">
+                    <button type="button" class="btn btn-info text-white px-4 fs-4 d-inline-flex d-md-none d-xl-inline-flex">View All</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--#endregion - end of - students section -->
 
     <!--#region - start of - Register modal -->
     <div class="modal fade" id="register-modal" tabindex="-1" aria-labelledby="register-modal-label" aria-hidden="true">
