students section updated

--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
     <section class="students pt-5 mt-5 mb-3">
         <div class="container-md">
             <div class="row">
-                <div class="col-12 mb-4">
-                    <article class="col-xl-5 px-0">
+                <div class="col-12 text-center text-md-start mb-4">
+                    <article class="col-md-9 col-xl-5 px-0">
                         <h2 class="fs-1">Meet Our Successfull Students</h2>
-                        <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="text-secondary pe-md-5 pe-xl-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     </article>
                 </div>
 
