--- a/index.html
+++ b/index.html
@@ -778,6 +778,89 @@
     </section>
     <!--#endregion - end of - feedback section -->
 
+    <!--#region - start of - faq section -->
+    <section class="faq pt-5 mt-5 mb-3">
+        <div class="container-md">
+            <div class="row justify-content-center">
+                <div class="col-xl-7 mb-4">
+                    <article class="text-center">
+                        <h2 class="fs-1 mb-3">Frequently Asked Questions</h2>
+                        <p class="text-secondary px-md-5 mx-xl-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    </article>
+                </div>
+
+                <div class="col-xl-8">
+                    <!--#region - start of - faq accordion -->
+                    <div class="accordion accordion-flush">
+
+                        <!--#region - start of - single item -->
+                        <article class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header " id="faq-h1">
+                                <button class="accordion-button fs-5 rounded border shadow-none fw-bold text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#faq-1" aria-expanded="true" aria-controls="faq-1">
+                                    What are the differences between Flexbox and Grid?
+                                </button>
+                            </h2>
+                            <div id="faq-1" class="accordion-collapse collapse show" aria-labelledby="faq-h1">
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
+                                </p>
+                            </div>
+                        </article>
+                        <!--#endregion - end of - single item -->
+
+                        <!--#region - start of - single item -->
+                        <article class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header" id="faq-h2">
+                                <button class="accordion-button fs-5 collapsed rounded border shadow-none fw-bold text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2" aria-expanded="false" aria-controls="faq-2">
+                                    What are the differences between Bootstrap & Tailwind?
+                                </button>
+                            </h2>
+                            <div id="faq-2" class="accordion-collapse collapse" aria-labelledby="faq-h2">
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
+                                </p>
+                            </div>
+                        </article>
+                        <!--#endregion - end of - single item -->
+                        <!--#region - start of - single item -->
+                        <article class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header" id="faq-h3">
+                                <button class="accordion-button fs-5 collapsed rounded border shadow-none fw-bold text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3" aria-expanded="false" aria-controls="faq-3">
+                                    What is CSS box model?
+                                </button>
+                            </h2>
+                            <div id="faq-3" class="accordion-collapse collapse" aria-labelledby="faq-h3">
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
+                                </p>
+                            </div>
+                        </article>
+                        <!--#endregion - end of - single item -->
+
+                        <!--#region - start of - single item -->
+                        <article class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header" id="faq-h4">
+                                <button class="accordion-button fs-5 collapsed rounded border shadow-none fw-bold text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#faq-4" aria-expanded="false" aria-controls="faq-4">
+                                    What is a semantic tag?
+                                </button>
+                            </h2>
+                            <div id="faq-4" class="accordion-collapse collapse" aria-labelledby="faq-h4">
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
+                                </p>
+                            </div>
+                        </article>
+                        <!--#endregion - end of - single item -->
+                    </div>
+                    <!--#endregion - end of - faq accordion -->
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--#endregion - end of - faq section -->
+
+
     <!--#region - start of - Register modal -->
     <div class="modal fade" id="register-modal" tabindex="-1" aria-labelledby="register-modal-label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
