--- a/index.html
+++ b/index.html
@@ -860,6 +860,50 @@
     </section>
     <!--#endregion - end of - faq section -->
 
+    <!--#region - start of - trust section -->
+    <section class="trust pt-5 mt-5 mb-3 d-none d-xl-block">
+        <div class="container-md">
+            <div class="row justify-content-center">
+                <div class="mb-4">
+                    <article class="text-center">
+                        <h2 class="fs-1 mb-5">Trusted by over 800+ companies</h2>
+                        <figure class="d-flex flex-wrap justify-content-between">
+                            <picture class="d-inline-flex">
+                                <source srcset="./images/company/company-1.webp">
+                                <img src="./images/company/company-1.png" alt="image" class="img-fluid" width="178" height="25">
+                            </picture>
+                            <picture class="d-inline-flex">
+                                <source srcset="./images/company/company-2.webp">
+                                <img src="./images/company/company-2.png" alt="image" class="img-fluid" width="150" height="42">
+                            </picture>
+                            <picture class="d-inline-flex">
+                                <source srcset="./images/company/company-3.webp">
+                                <img src="./images/company/company-3.png" alt="image" class="img-fluid" width="120" height="33">
+                            </picture>
+                            <picture class="d-inline-flex">
+                                <source srcset="./images/company/company-4.webp">
+                                <img src="./images/company/company-4.png" alt="image" class="img-fluid" width="180" height="23">
+                            </picture>
+                            <picture class="d-inline-flex">
+                                <source srcset="./images/company/company-5.webp">
+                                <img src="./images/company/company-5.png" alt="image" class="img-fluid" width="156" height="37">
+                            </picture>
+                            <picture class="d-inline-flex">
+                                <source srcset="./images/company/company-6.webp">
+                                <img src="./images/company/company-6.png" alt="image" class="img-fluid" width="161" height="42">
+                            </picture>
+                        </figure>
+                    </article>
+                </div>
+
+                <div class="col-xl-8">
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--#endregion - end of - trust section -->
 
     <!--#region - start of - Register modal -->
     <div class="modal fade" id="register-modal" tabindex="-1" aria-labelledby="register-modal-label" aria-hidden="true">
