--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
     <section class="trust pt-5 mt-5 mb-3 d-none d-xl-block">
         <div class="container-md">
             <div class="row justify-content-center">
-                <div class="mb-4">
+                <div class="col-12 mb-4">
                     <article class="text-center">
                         <h2 class="fs-1 mb-5">Trusted by over 800+ companies</h2>
                         <figure class="d-flex flex-wrap justify-content-between">
@@ -904,6 +904,50 @@
         </div>
     </section>
     <!--#endregion - end of - trust section -->
+
+    <!--#region - start of - footer section -->
+    <footer class="footer py-5 mt-5 bg-dark text-white text-center">
+        <div class="container-md">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-xl-4">
+                    <svg class="logo-svg mb-3" viewBox="0 0 133 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.709 28.885C20.709 29.585 20.6624 30.215 20.569 30.775H6.39404C6.51071 32.175 7.00071 33.2717 7.86404 34.065C8.72738 34.8583 9.78904 35.255 11.049 35.255C12.869 35.255 14.164 34.4733 14.934 32.91H20.219C19.659 34.7767 18.5857 36.3167 16.999 37.53C15.4124 38.72 13.464 39.315 11.154 39.315C9.28738 39.315 7.60738 38.9067 6.11404 38.09C4.64404 37.25 3.48904 36.0717 2.64904 34.555C1.83238 33.0383 1.42404 31.2883 1.42404 29.305C1.42404 27.2983 1.83238 25.5367 2.64904 24.02C3.46571 22.5033 4.60904 21.3367 6.07904 20.52C7.54904 19.7033 9.24071 19.295 11.154 19.295C12.9974 19.295 14.6424 19.6917 16.089 20.485C17.559 21.2783 18.6907 22.41 19.484 23.88C20.3007 25.3267 20.709 26.995 20.709 28.885ZM15.634 27.485C15.6107 26.225 15.1557 25.2217 14.269 24.475C13.3824 23.705 12.2974 23.32 11.014 23.32C9.80071 23.32 8.77404 23.6933 7.93404 24.44C7.11738 25.1633 6.61571 26.1783 6.42904 27.485H15.634ZM23.0256 29.235C23.0256 27.275 23.4106 25.5367 24.1806 24.02C24.9739 22.5033 26.0473 21.3367 27.4006 20.52C28.7539 19.7033 30.2589 19.295 31.9156 19.295C33.1756 19.295 34.3773 19.575 35.5206 20.135C36.6639 20.6717 37.5739 21.395 38.2506 22.305V13.1H43.2206V39H38.2506V36.13C37.6439 37.0867 36.7923 37.8567 35.6956 38.44C34.5989 39.0233 33.3273 39.315 31.8806 39.315C30.2473 39.315 28.7539 38.895 27.4006 38.055C26.0473 37.215 24.9739 36.0367 24.1806 34.52C23.4106 32.98 23.0256 31.2183 23.0256 29.235ZM38.2856 29.305C38.2856 28.115 38.0523 27.1 37.5856 26.26C37.1189 25.3967 36.4889 24.7433 35.6956 24.3C34.9023 23.8333 34.0506 23.6 33.1406 23.6C32.2306 23.6 31.3906 23.8217 30.6206 24.265C29.8506 24.7083 29.2206 25.3617 28.7306 26.225C28.2639 27.065 28.0306 28.0683 28.0306 29.235C28.0306 30.4017 28.2639 31.4283 28.7306 32.315C29.2206 33.1783 29.8506 33.8433 30.6206 34.31C31.4139 34.7767 32.2539 35.01 33.1406 35.01C34.0506 35.01 34.9023 34.7883 35.6956 34.345C36.4889 33.8783 37.1189 33.225 37.5856 32.385C38.0523 31.5217 38.2856 30.495 38.2856 29.305ZM66.3113 19.61V39H61.3763V36.55C60.7463 37.39 59.918 38.055 58.8913 38.545C57.888 39.0117 56.7913 39.245 55.6013 39.245C54.0846 39.245 52.743 38.93 51.5763 38.3C50.4096 37.6467 49.488 36.7017 48.8113 35.465C48.158 34.205 47.8313 32.7117 47.8313 30.985V19.61H52.7313V30.285C52.7313 31.825 53.1163 33.015 53.8863 33.855C54.6563 34.6717 55.7063 35.08 57.0363 35.08C58.3896 35.08 59.4513 34.6717 60.2213 33.855C60.9913 33.015 61.3763 31.825 61.3763 30.285V19.61H66.3113Z" fill="#0B8A82" />
+                        <path d="M83.0272 39L77.6372 29.48H75.3272V39H70.4272V14.57H79.5972C81.4872 14.57 83.0972 14.9083 84.4272 15.585C85.7572 16.2383 86.7489 17.1367 87.4022 18.28C88.0789 19.4 88.4172 20.66 88.4172 22.06C88.4172 23.67 87.9505 25.1283 87.0172 26.435C86.0839 27.7183 84.6955 28.605 82.8522 29.095L88.6972 39H83.0272ZM75.3272 25.805H79.4222C80.7522 25.805 81.7439 25.49 82.3972 24.86C83.0505 24.2067 83.3772 23.3083 83.3772 22.165C83.3772 21.045 83.0505 20.1817 82.3972 19.575C81.7439 18.945 80.7522 18.63 79.4222 18.63H75.3272V25.805ZM110.874 28.885C110.874 29.585 110.827 30.215 110.734 30.775H96.5591C96.6757 32.175 97.1657 33.2717 98.0291 34.065C98.8924 34.8583 99.9541 35.255 101.214 35.255C103.034 35.255 104.329 34.4733 105.099 32.91H110.384C109.824 34.7767 108.751 36.3167 107.164 37.53C105.577 38.72 103.629 39.315 101.319 39.315C99.4524 39.315 97.7724 38.9067 96.2791 38.09C94.8091 37.25 93.6541 36.0717 92.8141 34.555C91.9974 33.0383 91.5891 31.2883 91.5891 29.305C91.5891 27.2983 91.9974 25.5367 92.8141 24.02C93.6307 22.5033 94.7741 21.3367 96.2441 20.52C97.7141 19.7033 99.4057 19.295 101.319 19.295C103.162 19.295 104.807 19.6917 106.254 20.485C107.724 21.2783 108.856 22.41 109.649 23.88C110.466 25.3267 110.874 26.995 110.874 28.885ZM105.799 27.485C105.776 26.225 105.321 25.2217 104.434 24.475C103.547 23.705 102.462 23.32 101.179 23.32C99.9657 23.32 98.9391 23.6933 98.0991 24.44C97.2824 25.1633 96.7807 26.1783 96.5941 27.485H105.799ZM122.536 34.485L127.436 19.61H132.651L125.476 39H119.526L112.386 19.61H117.636L122.536 34.485Z" fill="#C6258F" />
+                    </svg>
+                    <address class="mb-1">Office 41, Zawaya Buildin, Ghala Muscat,
+                        <br> Sultanate of Oman
+                    </address>
+
+                    <!--#region - start of - footer navigation -->
+                    <nav class="navbar justify-content-evenly px-md-3 px-xl-5">
+                        <a href="#" class="nav-link">Privacy Ploicy</a> <span>|</span> <a href="#" class="nav-link">Terms of use</a>
+                    </nav>
+                    <!--#endregion - end of - footer navigation -->
+
+                    <!--#region - start of - social navigation -->
+                    <nav class="social-nav text-center d-flex justify-content-evenly px-xl-5 mx-xl-4 mt-3">
+                        <a href="https://www.facebook.com/Bilashism" class="nav-link bg-info bg-opacity-75 rounded-circle p-3 d-inline-flex" title="Facebook" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                            </svg>
+                        </a>
+                        <a href="https://twitter.com/bilashism" class="nav-link bg-info bg-opacity-75 rounded-circle p-3 d-inline-flex" title="Twitter" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/in/bilashism/" class="nav-link bg-info bg-opacity-75 rounded-circle p-3 d-inline-flex" title="Linkedin" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                            </svg>
+                        </a>
+                    </nav>
+                    <!--#endregion - end of - social navigation -->
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--#endregion - end of - footer section -->
 
     <!--#region - start of - Register modal -->
     <div class="modal fade" id="register-modal" tabindex="-1" aria-labelledby="register-modal-label" aria-hidden="true">
